[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "lerobot-sirius"
version = "0.1.0"
description = "SIRIUS-style intervention-weighted dataset and training for LeRobot"
requires-python = ">=3.10"
dependencies = [
    # 0.6.0 is a hard floor, not a preference: lerobot_sirius_train imports lerobot.jobs,
    # lerobot.configs.JobConfig and lerobot.utils.collate, and reads cfg.dataset.eval_split --
    # none of which exist in 0.5.x. (">0.5.2" would have admitted 0.5.3 and failed at import.)
    "lerobot>=0.6.0",
]

[project.scripts]
lerobot-sirius-train = "lerobot_sirius.lerobot_sirius_train:main"

[tool.setuptools]
# repo root is the package: dataset.py -> lerobot_sirius.dataset, etc.
packages = ["lerobot_sirius"]
package-dir = {"lerobot_sirius" = "."}
